--- a/perfil.html
+++ b/perfil.html
@@ -24,7 +24,7 @@
                     <a class="nav-TextoInicio" href="#">Inicio</a>
                     <div class="input-wrapper">
                         <input type="text" id="searchbar-2" class="searchbar" placeholder="Buscar...">
-                        <a href="#">
+                        <a href="search.html">
                             <i class="fa-solid fa-magnifying-glass"></i>
                         </a>
                     </div>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="c3-2">
                     <div class="contenedor imagenPerfil">
-                        <div class="columna centrado">
+                        <div class="columna centrado fondoNegroColumna">
                             <img class="imagenCargar" id="preview" src="img/user.png" alt="Vista previa"
                                 style="visibility: visible;" />
                         </div>
